shared/scss/layout/st-view.scss
@use '../base/variables' as *;
@use '../base/text-styles' as *;

.st-view {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-height: calc(var(--vh, 1vh) * 100);
    box-sizing: border-box;
    padding: var(--st-vertical-padding, 20px) var(--st-horizontal-padding, 40px) var(--st-vertical-padding, 20px) var(--st-horizontal-padding, 40px);

    .st-toolbar {
        margin-top: auto;
    }

    &.auto {
        min-height: auto;
    }

    > main {
        > h1:first-child {
            padding-bottom: 20px;
            @extend .style-title-1;

            + p {
                @extend .style-description;
                padding-bottom: 20px;

                &:last-child {
                    padding-bottom: 0;
                }
            }
        }
    }
}

